--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pusat Pelaporan & Transparansi - Facebook Style</title>
+    <title>Tools Report Facebook &Style</title>
     
     <!-- Tailwind CSS (via CDN untuk modern styling) -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -389,4 +389,4 @@
 
     </script>
 </body>
-  </html>
+                    </html>
