--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Facebook - Pusat Laporan Keamanan (Dark Mode)</title>
+    <title>Tools Account Facebook</title>
     <style>
         /* Variabel Warna Mode Gelap Permanen */
         :root {
